@startuml
entity Boat {
    boat_id : long
    name : String
    isRented : boolean
    description : String
    price : double
    capacity : int
}

entity Customer {
    customer_id : long
    firstname : String
    lastname: String
    address : String
    telephoneNumber : String
    email : String
}

entity RentalItems {
  item_id : long
}

entity Lease {
    reservation_id : long
    item_id: long
}

entity Payment {
    reservation_id: long
    amount : double
    payment_date : LocalDate
}

entity Employee {
    employee_id : long
    firstname : String
    lastname: String
    role : String
    telephoneNumber : String
}

entity Reservation {
    reservation_id : long
    customer_id : long
    employee_id : long
    reservation_start_date : LocalDate
    reservation_end_date : LocalDate
}

entity Extras {
    extra : long
    name : String
    description : String
    price : double
}

entity Yacht {
    rooms: int
    extraBoat: int
}

entity Sailboat {
    sails: int
    type: SailboatType
}

entity Motorboat {
    motors: int
    material: String
}


' Beziehungen

Customer -- "1..*" Reservation
Employee -- "1..*" Reservation

Reservation -- "1..*" Lease
Reservation -- "1..1" Payment

Lease -- "1..*" RentalItems

RentalItems <|-- Boat
RentalItems <|-- Extras


Boat <|-- Motorboat
Boat <|-- Sailboat
Boat <|-- Yacht


@enduml
